Fixed PS-3832 (Revert Percona fix for PS-990)

https://jira.percona.com/browse/PS-3832

Reverted our fix for PS-990
"LP #1594964: percona 5.7.13-6-1 SLAVE SQL_THREAD memory leaks on the active server with Master-Master replication when relay_log_info_repository=TABLE"
(https://jira.percona.com/browse/PS-990)
(commit 4b08ef7) as original Bug #85251
"Memory leak in master-master GTID replication with sync_relay_log_info"
(https://bugs.mysql.com/bug.php?id=85251) was fixed in 5.7.21
(commit mysql/mysql-server@f60bc04) and (commit mysql/mysql-server@be23d33).

This should have been done during upstream 5.7.21 merge (PR #2137) but
it was not.